--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "fix": "standard --fix --verbose | snazzy"
   },
   "dependencies": {
     "@ant-design/icons": "^4.6.2",
@@ -34,7 +35,9 @@
     "redux-persist": "^6.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "snazzy": "^9.0.0",
+    "standard": "^16.0.3"
   },
   "private": true
 }
